# rust-taker

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/commands/: logs.rs  market.rs  mod.rs  reports.rs  setup.rs  swap.rs  wallet.rs
src/api/: commands.ts  types.ts
src/components/app/: AppShell.tsx
src/components/ui/: display.tsx  inputs.tsx  layout.tsx
src/lib/: connectivity.ts  market-format.ts  timing.ts  wallet-format.ts
src/pages/market/: MarketPage.tsx
src/pages/send/: SendPage.tsx
src/pages/settings/: SettingsPage.tsx
src/pages/setup/: SelectWalletStep.tsx  SetupPage.tsx  types.ts
src/pages/wallet/: WalletPage.tsx
src/store/: header-actions.ts  session.ts  toast.ts  wallet-cache.ts
