[package]
name = "rust-taker"
version = "0.1.0"
description = "Coinswap Taker desktop app (Tauri + React)"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rust_taker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Core protocol crate. Path dep for development; pin a git rev for CI/release:
# coinswap = { git = "https://github.com/citadel-tech/coinswap", rev = "<pin>" }
coinswap = { path = "../../coinswap" }

